# kio-gdrive

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  HACKING  Messages.sh  README  README.md  README.packagers  gdrive.json  gdrive.protocol
autotests/: CMakeLists.txt  listtest.cpp  urltest.cpp
cmake/modules/: FindIntltool.cmake
desktop/: CMakeLists.txt  gdrive-network.desktop  org.kde.kio-gdrive.appdata.xml  org.kde.kio-gdrive.desktop  org.kde.kio_gdrive.appdata.xml  org.kde.kio_gdrive.metainfo.xml
doc/: CMakeLists.txt  index.docbook
kaccounts/: CMakeLists.txt  gdrive.notifyrc  google-drive.service.in  kaccountsplugin.cpp  kaccountsplugin.h  kaccountsplugin.json
po/ar/: kio5_gdrive.po  kio6_gdrive.po
po/ast/: kio5_gdrive.po
po/az/: kio5_gdrive.po  kio6_gdrive.po
po/be/: kio5_gdrive.po  kio6_gdrive.po
po/bg/: kio5_gdrive.po  kio6_gdrive.po
po/ca/: kio5_gdrive.po  kio6_gdrive.po
po/ca/docs/kioslave5/gdrive/: index.docbook
po/ca/docs/kioworker6/gdrive/: index.docbook
po/ca@valencia/: kio5_gdrive.po  kio6_gdrive.po
po/cs/: kio5_gdrive.po  kio6_gdrive.po
po/da/: kio5_gdrive.po  kio6_gdrive.po
po/de/: kio5_gdrive.po  kio6_gdrive.po
po/de/docs/kioslave5/gdrive/: index.docbook
po/el/: kio5_gdrive.po  kio6_gdrive.po
po/en_GB/: kio5_gdrive.po  kio6_gdrive.po
po/eo/: kio5_gdrive.po  kio6_gdrive.po
po/es/: kio5_gdrive.po  kio6_gdrive.po
po/es/docs/kioslave5/gdrive/: index.docbook
po/es/docs/kioworker6/gdrive/: index.docbook
po/et/: kio5_gdrive.po  kio6_gdrive.po
po/eu/: kio5_gdrive.po  kio6_gdrive.po
po/fi/: kio5_gdrive.po  kio6_gdrive.po
po/fr/: kio5_gdrive.po  kio6_gdrive.po
po/ga/: kio6_gdrive.po
po/gl/: kio5_gdrive.po  kio6_gdrive.po
po/he/: kio5_gdrive.po  kio6_gdrive.po
po/hi/: kio5_gdrive.po  kio6_gdrive.po
po/hu/: kio5_gdrive.po  kio6_gdrive.po
po/ia/: kio5_gdrive.po  kio6_gdrive.po
po/id/: kio5_gdrive.po  kio6_gdrive.po
po/ie/: kio5_gdrive.po  kio6_gdrive.po
po/is/: kio6_gdrive.po
po/it/: kio5_gdrive.po  kio6_gdrive.po
po/it/docs/kioworker6/gdrive/: index.docbook
po/ja/: kio5_gdrive.po  kio6_gdrive.po
po/ka/: kio5_gdrive.po  kio6_gdrive.po
po/ko/: kio5_gdrive.po  kio6_gdrive.po
po/lt/: kio5_gdrive.po  kio6_gdrive.po
po/lv/: kio6_gdrive.po
po/nl/: kio5_gdrive.po  kio6_gdrive.po
po/nl/docs/kioworker6/gdrive/: index.docbook
po/nn/: kio5_gdrive.po  kio6_gdrive.po
po/pl/: kio5_gdrive.po  kio6_gdrive.po
po/pt/: kio5_gdrive.po  kio6_gdrive.po
po/pt/docs/kioworker6/gdrive/: index.docbook
po/pt_BR/: kio5_gdrive.po  kio6_gdrive.po
po/pt_BR/docs/kioworker6/gdrive/: index.docbook
po/ro/: kio5_gdrive.po  kio6_gdrive.po
po/ru/: kio5_gdrive.po  kio6_gdrive.po
po/ru/docs/kioworker6/gdrive/: index.docbook
po/sa/: kio6_gdrive.po
po/sk/: kio5_gdrive.po  kio6_gdrive.po
po/sl/: kio5_gdrive.po  kio6_gdrive.po
po/sl/docs/kioworker6/gdrive/: index.docbook
po/sr/docs/kioworker6/gdrive/: index.docbook
po/sr@latin/docs/kioworker6/gdrive/: index.docbook
po/sv/: kio5_gdrive.po  kio6_gdrive.po
po/sv/docs/kioslave5/gdrive/: index.docbook
po/ta/: kio5_gdrive.po  kio6_gdrive.po
po/tr/: kio5_gdrive.po  kio6_gdrive.po
po/tr/docs/kioslave5/gdrive/: CMakeLists.txt  index.docbook
po/tr/docs/kioworker6/gdrive/: index.docbook
po/uk/: kio5_gdrive.po  kio6_gdrive.po
po/uk/docs/kioworker6/gdrive/: index.docbook
po/zh_CN/: kio5_gdrive.po  kio6_gdrive.po
po/zh_TW/: kio5_gdrive.po  kio6_gdrive.po
purpose/: CMakeLists.txt  Messages.sh  gdrivejob.cpp  gdrivejob.h  purpose_gdrive.cpp  purpose_gdrive.json  purpose_gdrive_config.qml
service/: CMakeLists.txt  google-drive.service.in
src/: .kdev_include_paths  CMakeLists.txt  Messages.sh  abstractaccountmanager.cpp  abstractaccountmanager.h  accountmanager.cpp  accountmanager.h  copyurlitemaction.cpp  copyurlitemaction.json  gdrive_udsentry.h  gdrivebackend.h.in  gdrivehelper.cpp  gdrivehelper.h  gdriveurl.cpp  gdriveurl.h  kaccountsmanager.cpp  kaccountsmanager.h  keychainaccountmanager.cpp  keychainaccountmanager.h  kio_gdrive.cpp  kio_gdrive.h  pathcache.cpp  pathcache.h  urlhelper.cpp  urlhelper.h
src/integration/: CMakeLists.txt
src/integration/contextmenuaction/: CMakeLists.txt  contextmenuaction.cpp  contextmenuaction.h  contextmenuaction.json
src/integration/copyurlitemaction/: CMakeLists.txt  copyurlitemaction.cpp  copyurlitemaction.h
src/integration/propertiesplugin/: CMakeLists.txt  gdrivepropertiesplugin.cpp  gdrivepropertiesplugin.desktop  gdrivepropertiesplugin.h  gdrivepropertiesplugin.json  gdrivepropertiesplugin.ui
